# baikal

./: Makefile  README.md  compareMeth.C  logbook  preprocessing.cc  recoTimeClusters_stage1_mc.C  runTimeCalib.sh  runTimeCalib_multiproc.sh  timeCalib_stage1_mc.C
bmyreco/: #BMyRecoReco.cc#  BClusterProducer.cc  BClusterProducer.h  BMyRecCint.cc  BMyRecCint.h  BMyRecLinkDef.h  BMyReco.cc  BMyReco.cc~  BMyReco.h  BMyRecoBEvt.cc  BMyRecoBEvt.cc~  BMyRecoBEvt.h~  BMyRecoChanSetter.cc  BMyRecoChanSetter.cc~  BMyRecoChanSetter.h  BMyRecoChanSetter.h~  BMyRecoMC.cc  BMyRecoMC.cc~  BMyRecoMC.h  BMyRecoMC.h~  BMyRecoReco.cc  BMyRecoReco.cc~  BMyRecoReco.h  BMyRecoReco.h~  BMyReco_h.d  BStringCluster.cc  BStringCluster.h  BTimeClusters.cc  BTimeClusters.h  CMakeLists.txt  Makefile  preprocessing.cc  testJob.C
bmyreco/PROOF-INF/: SETUP.C
breconstruct/: #BReconstruct.cc#  BRecCint.cc  BRecCint.h  BRecLinkDef.h  BRecParameters.cc  BRecParameters.h  BRecQualify.cc  BRecQualify.h  BRecQuality.cc  BRecQuality.h  BReconstruct.cc  BReconstruct.h  BReconstruct.h~  BReconstructLaser.cc  BReconstructLaser.h  BReconstructMuon.cc  BReconstructMuon.cc~  BReconstructMuon.h  BReconstructMuon.h~  CMakeLists.txt  Makefile
breconstruct/PROOF-INF/: SETUP.C
macros/: testJob.C  testJob.C~  testJobDATA.C  testJobDATA.C~  testJobMC.C  testJobMC.C~
rec/: rec_exp.C  rec_mc.C  stage1_exp.C  stage1_mc.C  timeCalib_stage1_mc.C
